Added a new game mode: FURTIVITY!